# lcls-catalog

./: .gitignore  CRON.md  GUIDE.md  OPERATION.md  PROPOSAL.md  README.md  SKILLS.md  env.sh  pyproject.toml
examples/: index_all_parquet.sh
scripts/: catalog-cron.sh  catalog_index.sbatch  run_catalog_index.sh
src/lcls_catalog/: __init__.py  catalog.py  cli.py  parquet_catalog.py  schema.py
tests/: conftest.py  test_browse.py  test_edge_cases.py  test_parquet.py  test_snapshot.py
